@@ -1,4 +1,7 @@
 {{$NEXT}}
+-Fix bug in strict_arrays where string containing integer is recognized as an
+ integer, causing parsing to fail when present in an array containing other
+ strings
 
 0.10 2020-09-08
 -Remove dependency on DateTime::Format::RFC3339
